--- a/JS/NodeJSArduino/NodeJSArduino/package.json
+++ b/JS/NodeJSArduino/NodeJSArduino/package.json
@@ -10,6 +10,7 @@
     "express": "^4.16.2",
     "johnny-five": "^0.11.6",
     "serialport": "^6.0.4",
+    "socket.io": "^2.0.4",
     "ws": "^3.3.2"
   }
 }
